--- a/MakingChangeApp/Views/Home/Index.cshtml
+++ b/MakingChangeApp/Views/Home/Index.cshtml
@@ -1,31 +1,9 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
+<p><h1 class="title"><a href="~/Home/SavingsTool">This Is What We Do!</a></h1></p><br /><br /><br />
+<p>
+    <img src="~/Content/HomePagePic.png" alt="" style="width:330px;height:190px;margin-right:30px;float:left">
+    <strong>Making Change</strong> comes from humble beginnings. What little money was availible to my family always went towards necessities and if anything was left it had to go towards the rainy day fund to keep the car running or make sure everyone was in good health. My father always said a penny saved is a penny earned, that and the fact that he is a United States Marine Veteran instilled in me a good work ethic so that I could value the time and effort I put into any project and not waste the reward. With that in mind Making Change is born. <a href="~/Home/MyPage"><strong>Start Making Change!</strong></a>
+</p>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
