--- a/MakingChangeApp/Views/Shared/_Layout.cshtml
+++ b/MakingChangeApp/Views/Shared/_Layout.cshtml
@@ -1,43 +1,46 @@
 ﻿<!DOCTYPE html>
+
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="keywords" content="Making Change, Savings" />
+    <meta name="author" content="Eugene W. Carrington Jr." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-
+    @RenderSection("SpecialStyles", false)
+    <link href="~/Content/MC.css" rel="stylesheet" />
+    @Scripts.Render("~/bundles/jquery")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+    <div id="header">
+        <div id="logo" float="left">
+            <br /><h1>Making <span style="color:white">Change</span></h1>
+            <div id="logo a" style="float:right">
+                <img src="~/Content/MCLogo.png" height="150" width="270" float="right" />
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+        </div>
+        <div id="menu-bg">
+            <div id="menu">
+                <ul id="main">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("My Page", "MyPage", "Home")</li>
+                    <li>@Html.ActionLink("Savings Tool", "SavingsTool", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.Partial("_LoginPartial")</li>
                 </ul>
-                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
-    <div class="container body-content">
+
+    <div id="page">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+        <div style="clear: both;">&nbsp;</div>
+    </div>
+    <div id="footer">
+        <div id="footer-content">
+            <p>&copy;2018 All Rights Reserved. &nbsp;&nbsp; Design by <a href="#" rel="nofollow">Eugene W Carrington Jr.</a></p>
+        </div>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
